sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: value j
			if(plusPetit(i,j)){
                                       ^AlgBubbleSort1:8: error: not found: value j
				echange(i,j)
                                          ^