sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var inverser:Boolean=true;
	while (inverser){
		inverser=false;
		for (i<-0 to getNombreValeurs()-2){
			if(plusPetit(i,j)){
				echange(i,j)
				inverser=true
				
			}
		}
			
	}
		
}
